--- a/app/src/main/res/layout/alert_popup.xml
+++ b/app/src/main/res/layout/alert_popup.xml
@@ -49,6 +49,7 @@
             android:linksClickable="true"
             android:textAlignment="center"
             android:textStyle="bold"
+            android:textColorLink="#00FF00"
             android:text="stackoverflow.com" />
 
         <TextView
